Bug 1019417 - When enumerating the window, make sure to not enumerate frame names that we wouldn't actually expose. r=bholley, a=sledru